<resources>
    <!-- Temp-->

    <string name="cancel">Cancel</string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="ask_1">Ask 1</string>
    <string name="ask_2">Ask 2</string>


    <!-- -->
    <string name="app_name">Health Caser</string>
<!--Activity Titles-->
    <string name="title_activity_login">Login</string>

    <string name="title_activity_my_statistics">Statistics</string>
    <string name="title_activity_health_case_test">Test</string>

    <string name="title_activity_health_case_test_result">Results</string>
    <string name="about">About Health Caser</string>
    <string name="action_settings">Settings</string>
    <!-- Landing Page-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_l">LActivity</string>
    <string name="moreHist">More History</string>
    <string name="takeTest">View Tests</string>
    <string name="license">HealthCaser(TM) was created by Alan Berman, Charles Du, and Gavin Wiener in 2015.\nStep 1: Register a new account or login with your existing details.\nStep 2: Choose an available Health Case.\nStep 3: Have fun and learn!</string>
    <string name="hello_world">Hello world!</string>

    <string name="hint_email">Email</string>

    <!-- Choose a Case-->
    <string name="title_activity_choose_case">Choose a Case</string>
    <string name="cases">Cases</string>
    <string name="choose_case_welcome">Welcome. Choose a specific health case or press RANDOM</string>
    <string name="start">Start</string>
    <string name="random">Random</string>

    <!-- Test-->
    <string name="ask">Ask a Question</string>
    <string name="test">Run a Test</string>
    <string name="diagnose">Diagnose Patient</string>


    <string name="test_image">Test Image</string>
    <!-- Diagnose Popup-->
    <string name="diagnosis_hint">Enter your diagnosis</string>
    <string name="diagnosis">Diagnosis</string>

    <string name="audit_trail">Your Doctor Pad</string>

    <!-- Statistics Activity-->
    <string name="heading_my_statistics">My Statistics</string>
    <string name="average_number_of_moves">Average Number of Moves</string>
    <string name="average_diagnose_accuracy" > Average Diagnosis Accuracy </string>
    <string name="total_health_cases_completed"> Total Health Cases Completed </string>
    <string name="average_diagnose_vs_moves">Average Diagnose-Move Ratio</string>
    <!-- Results Activity-->
    <string name="heading_results">Your Test Results</string>
    <string name="total_moves">Total Moves</string>
    <string name="first_diagnose">Num. Moves First Diagnosis</string>
    <string name="accuracy_diagnose">Diagnosis Accuracy</string>
    <string name="diagnose_vs_moves">Diagnose-Move Ratio</string>
    <string name="empty">Null</string>
    <string name="view_health_cases">View Health Cases</string>

    <!-- Test results popup-->
    <string name="test_popup_title">Test Results</string>
    <string name="next_result">Next Result</string>
    <string name="test_popup_next">Next</string>
    <string name="test_popup_close">Close</string>
    <string name="test_result_description">An image test result</string>
</resources>
