<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csc3003.healthcaser.HealthCaseTestResultActivity">

    <TextView
        android:id="@+id/heading_results"
        android:text="@string/heading_results" android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/total_moves_heading"
        android:text="@string/total_moves" android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/empty"
        android:id="@+id/total_moves_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/first_diagnose_heading"
        android:text="@string/first_diagnose" android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/first_diagnose_data"
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/diagnose_accuracy_heading"
        android:text="@string/accuracy_diagnose" android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/diagnose_accuracy_data"
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/diagnose_move_ratio_heading"
        android:text="@string/diagnose_vs_moves" android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/diagnose_move_ratio_data"
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/view_health_cases"
        android:layout_height="wrap_content"
        android:onClick="viewHealthCases"/>

</LinearLayout>
