<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="6"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >
    <TextView
        android:id="@+id/heading_statistics"
        android:text="@string/heading_my_statistics"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#000000"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:weightSum="1"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            >
            <TextView android:id="@+id/average_number_of_moves_heading"
                android:text="@string/average_number_of_moves"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/empty"
                android:textColor="#00aaff"
                android:layout_weight="1"
                android:id="@+id/average_number_of_moves_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/average_diagnose_accuracy_heading"
                android:layout_weight="1"
                android:text="@string/average_diagnose_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/average_diagnose_accuracy_data"
                android:layout_weight="1"
                android:text="@string/empty"
                android:textColor="#00aaff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/total_health_cases_completed_heading"
                android:text="@string/total_health_cases_completed"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/total_health_cases_completed_data"
                android:textColor="#00aaff"
                android:text="@string/empty"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/average_diagnose_move_ratio_heading"
                android:text="@string/average_diagnose_vs_moves"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/average_diagnose_move_ratio_data"
                android:textColor="#00aaff"
                android:text="@string/empty"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:text="@string/view_health_cases"
        android:layout_height="0dp"
        android:onClick="viewHealthCasesStats"
        android:layout_weight="1"
        />
</LinearLayout>