<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csc3003.healthcaser.LoadHealthCaseActivity">

    <TextView android:id="@+id/startInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/MoreHist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/testInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/diagInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        >

        <Button

            android:id="@+id/MoreHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreHist"
            />

        <Button
            android:id="@+id/tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takeTest"
             />
        <Button
            android:id="@+id/diagnose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnose"
            />

    </LinearLayout>

</LinearLayout>
