<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csc3003.healthcaser.HealthCaseTestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/case_title"
        android:textSize="20sp"
        android:layout_marginBottom="2dip"
    />

    <TextView android:layout_width="wrap_content"
        android:id="@+id/case_information"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

    <Button
        android:id="@+id/ask"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/ask"
        android:textAllCaps="false"
        android:onClick="showAskPopup"/>

        <Button
            android:id="@+id/test"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textAllCaps="false"
            android:onClick="showTestPopup"/>

        <Button
            android:id="@+id/diagnose"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="diagnose"
            android:textAllCaps="false"
            android:text="@string/diagnose"/>

    </LinearLayout>


</LinearLayout>
